# ai_x_security

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  Dockerfile  GETTING_STARTED.md  LEARNING_GUIDE.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements-core.txt  requirements-llm.txt  requirements.txt
.claude/: settings.local.json
.claude/commands/: curriculum-check.md  update-ai-models.md  update-threat-intel.md
.claude/knowledge/: ioc-patterns.md  log-formats.md  mitre-attack.md  sigma-rules.md
.github/: mlc-config.json
.github/workflows/: ci.yml  codeql.yml  curriculum-check.yml  link-check.yml  pr-validation.yml  release.yml  scorecard.yml  stale.yml
ctf/: README.md
ctf-challenges/: README.md  achievements.json
curriculum/: ai-security-training-program.md
data/: README.md
data/logs/: auth_logs.json
data/malware/: samples.json
data/network/: traffic.csv
data/phishing/: emails.csv
data/threat-actor-ttps/: README.md
data/threat-intel/: iocs.json
demo/: launcher.py
docker/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docker/init-db/: 01-init-schema.sql
docs/: CLAUDE.md  COMMERCIAL_LICENSING.md  GETTING_STARTED.md  LAB_DEPENDENCY_GRAPH.md  LICENSE_HEADERS.md  LICENSE_PROTECTION_SUMMARY.md  ROADMAP.md  SOURCES.md  _config.yml  documentation-guide.md  index.md  lab-prerequisites.md  learning-guide.md
docs/guides/: ai-for-security-leaders.md  api-keys-guide.md  cursor-ide-guide.md  dev-environment-setup.md  gemini-cli-guide.md  google-adk-guide.md  langchain-guide.md  llm-provider-comparison.md  quickstart-guide.md  security-compliance-guide.md  security-fundamentals-for-beginners.md  threat-landscape-2025.md  windows-internals-quickref.md  workshops-guide.md  xql-guide.md
docs/walkthroughs/: README.md  lab00d-walkthrough.md  lab00f-hello-world-ml-walkthrough.md  lab01-phishing-classifier-walkthrough.md  lab01-walkthrough.md  lab04-walkthrough.md  lab07-yara-generator-walkthrough.md  lab09b-monitoring-ai-systems-walkthrough.md  lab18-fine-tuning-walkthrough.md  lab20-sigma-fundamentals-walkthrough.md  lab24-monitoring-ai-systems-walkthrough.md  lab25-dfir-fundamentals-walkthrough.md  lab28-live-response-walkthrough.md  lab29-ir-copilot-walkthrough.md  lab30-ransomware-fundamentals-walkthrough.md  lab31-ransomware-detection-walkthrough.md  lab32-ransomware-simulation-walkthrough.md  lab37-ai-powered-threat-actors-walkthrough.md  lab38-ml-security-intro-walkthrough.md  lab44-cloud-security-fundamentals-walkthrough.md  lab45-cloud-security-ai-walkthrough.md  lab50-purple-team-ai-walkthrough.md
labs/: README.md
labs/lab00-environment-setup/: README.md
labs/lab00a-python-security-fundamentals/: README.md
labs/lab00b-ml-concepts-primer/: README.md
labs/lab00c-intro-prompt-engineering/: README.md
labs/lab00c-prompt-engineering-mastery/: README.md
labs/lab00d-ai-in-security-operations/: README.md
labs/lab00e-visualization-stats/: README.md
labs/lab00f-hello-world-ml/: README.md
labs/lab00g-working-with-apis/: README.md
labs/lab00h-vibe-coding-with-ai/: README.md
labs/lab00i-ctf-fundamentals/: README.md
labs/lab01-phishing-classifier/: README.md
labs/lab01-python-security-fundamentals/: README.md
labs/lab02-intro-prompt-engineering/: README.md
labs/lab02-malware-clustering/: README.md
notebooks/: lab00a_python_security.ipynb  lab00b_ml_concepts.ipynb  lab00c_prompt_engineering.ipynb  lab00f_hello_world_ml.ipynb  lab01_phishing_classifier.ipynb  lab01_python_security.ipynb  lab02_malware_clustering.ipynb  lab02_prompt_engineering.ipynb  lab03_anomaly_detection.ipynb  lab04_llm_log_analysis.ipynb  lab04_ml_concepts.ipynb  lab05_ai_security_ops.ipynb  lab05_threat_intel_agent.ipynb  lab06_security_rag.ipynb  lab06_visualization_stats.ipynb  lab07_hello_world_ml.ipynb  lab07_yara_generator.ipynb  lab08_vuln_scanner_ai.ipynb  lab08_working_with_apis.ipynb  lab09_detection_pipeline.ipynb  lab10_ir_copilot.ipynb  lab10_phishing_classifier.ipynb  lab11_malware_clustering.ipynb  lab11_ransomware_detection.ipynb  lab12_anomaly_detection.ipynb  lab12_ransomware_simulation.ipynb  lab13_memory_forensics.ipynb  lab13_ml_vs_llm.ipynb  lab14_c2_traffic.ipynb  lab14_first_ai_agent.ipynb  lab15_lateral_movement.ipynb  lab15_llm_log_analysis.ipynb  lab16_threat_actor_profiling.ipynb  lab16_threat_intel_agent.ipynb  lab17_adversarial_ml.ipynb  lab17_embeddings_vectors.ipynb  lab18_fine_tuning.ipynb  lab18_security_rag.ipynb  lab19_binary_basics.ipynb  lab19_cloud_security.ipynb  (+30 more)
resources/: README.md  mcp-servers-security-guide.md  tools-and-resources.md
scripts/: add_license_headers.py  check_ai_model_freshness.py  check_threat_intel_freshness.py  fix_notebook_lab_refs.py  fix_readme_lab_refs.py  generate_ctf_data.py  verify_setup.py
shared/: llm_config.py
templates/: cursorrules-security.md
tests/: conftest.py  test_curriculum_integrity.py  test_integration.py  test_lab00b_ml_concepts.py  test_lab00c_prompt_engineering.py  test_lab00d_ai_security_ops.py  test_lab01_phishing_classifier.py  test_lab02_malware_clustering.py  test_lab03_anomaly_detection.py  test_lab04_log_analysis.py  test_lab05_threat_intel.py  test_lab06_security_rag.py  test_lab07_hello_world_ml.py  test_lab07_yara_generator.py  test_lab08_vuln_scanner.py  test_lab09_detection_pipeline.py  test_lab10_ir_copilot.py  test_lab11_ransomware_detection.py  test_lab12_ransomware_simulation.py  test_lab13_memory_forensics.py  test_lab13_ml_vs_llm.py  test_lab14_c2_traffic.py  test_lab15_lateral_movement.py  test_lab16_threat_profiling.py  test_lab17_adversarial_ml.py  test_lab17_embeddings.py  test_lab18_fine_tuning.py  test_lab19_cloud_security.py  test_lab20_llm_red_teaming.py  test_lab45_cloud_security.py  test_lab_content_freshness.py  test_lab_data_integrity.py  test_lab_naming_consistency.py  test_lab_progression.py  test_no_private_content.py  test_notebook_07.py  test_notebook_13.py  test_notebook_17.py  test_xql_validator.py
(+222 files in other folders)
