[project]
name = "ai-for-the-win"
version = "1.9.0"
description = "Hands-on AI/ML training for security practitioners - DFIR, threat detection, and security automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI for the Win Contributors"}
]
keywords = [
    "security",
    "dfir",
    "threat-detection",
    "machine-learning",
    "llm",
    "incident-response",
    "malware-analysis",
    "soc",
    "xdr",
    "cortex"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<3.14"

dependencies = [
    # Core data science (Labs 00-13: ML foundations, no LLM required)
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",

    # LLM framework base (provider packages are optional - see [project.optional-dependencies])
    "langchain>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langgraph>=0.2.0",

    # Vector databases and embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",

    # NLP and text processing
    "nltk>=3.8.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",

    # Visualization
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/ai-for-the-win"
Documentation = "https://ai-for-the-win.github.io"
Repository = "https://github.com/ai-for-the-win/ai-for-the-win"

[project.optional-dependencies]
# =============================================================================
# LLM PROVIDERS - Install only what you need
# =============================================================================
# Usage: pip install -e ".[provider]"
#   pip install -e ".[ollama]"     # Free, local - no API key needed
#   pip install -e ".[anthropic]"  # Claude (recommended for quality)
#   pip install -e ".[openai]"     # GPT
#   pip install -e ".[google]"     # Gemini (free tier available)

# Local LLM - FREE, no API key required
ollama = [
    "langchain-ollama>=1.0.0,<2.0.0",
]

# Anthropic Claude - Best for security analysis
anthropic = [
    "anthropic>=0.70.0,<1.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
]

# OpenAI GPT - Widely supported ecosystem
openai = [
    "openai>=1.50.0,<3.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
]

# Google Gemini - Cost-effective, generous free tier
google = [
    "google-generativeai>=0.8.0,<1.0.0",
    "langchain-google-genai>=4.0.0,<5.0.0",
]

# All LLM providers - for CI/CD or users who want everything
all-llm = [
    "anthropic>=0.70.0,<1.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "openai>=1.50.0,<3.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "langchain-google-genai>=4.0.0,<5.0.0",
    "langchain-ollama>=1.0.0,<2.0.0",
    "litellm>=1.50.0,<2.0.0",
]

# =============================================================================
# DEVELOPMENT & DOCS
# =============================================================================
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "S", "B"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "labs"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "requires_api: marks tests requiring API keys",
]
